fix social icons style on IE

--- a/source/css/scss/components/social-media-icon/social-media-icon-sm/_module.scss
+++ b/source/css/scss/components/social-media-icon/social-media-icon-sm/_module.scss
@@ -1,3 +1,3 @@
 .spf-body i.social-media-icon-sm {
-  font-style: initial;
+  font-style: normal;
 }
